[package]
name = "cuda-convergence"
version = "0.1.0"
edition = "2021"
description = "Equilibrium detection for fleet deliberation — convergence states, prediction, equilibrium actions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-convergence"
keywords = ["ai", "fleet", "agent"]

[dependencies]
cuda-equipment = { path = "../cuda-equipment" }
